--- a/Boxetheus/Views/Shared/_Layout.cshtml
+++ b/Boxetheus/Views/Shared/_Layout.cshtml
@@ -3,16 +3,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Boxetheus</title>
+    <title>@ViewData["Title"] - Boxetheus App</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Boxetheus.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/WebApplication1.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Boxetheus</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Boxetheus App</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -22,6 +22,17 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        <style>
+                            .nav-item-right {
+                                margin-left: auto;
+                            }
+                        </style>
+                        <li class="nav-item nav-item-left">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="BoxViews" asp-action="Index">Boxetheus Products</a>
+                        </li>
+
+                        <li class="nav-item nav-item-right">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
@@ -36,10 +47,17 @@
             @RenderBody()
         </main>
     </div>
-
+     <style>
+        /* Ensure the footer is fixed to the bottom */
+        footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - Boxetheus - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - Boxtheus App - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
