--- a/Boxetheus/Views/BoxViews/Index.cshtml
+++ b/Boxetheus/Views/BoxViews/Index.cshtml
@@ -1,85 +1,106 @@
-﻿@model IEnumerable<Boxetheus.Models.BoxView>
+﻿@model Boxetheus.Models.BoxViewDesignModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "List of Boxes";
 }
 
-<h1>Index</h1>
+<h1>Box World</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-
-<form asp-controller="BoxViews" asp-action="Index">
+<form asp-controller="BoxViews" asp-action="Index" method="get">
     <p>
-        Title: <input type="text" name="SearchString" />
+        <select asp-for="BoxDesign" asp-items="Model.Design">
+            <option value="">All</option>
+        </select>
+
+        Title: <input type="text" asp-for="SearchString" />
         <input type="submit" value="Filter" />
     </p>
 </form>
-<table class="table"></p>
+
 <table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Brand)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.OrderDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Category)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Design)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Shape)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Size)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Quantity)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Brand)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Category)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Design)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Shape)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Size)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Quantity)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+                <thead>
+                    <tr>
+                        <th>
+                            @Html.DisplayNameFor(model => model.BoxViews![0].Brand)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.BoxViews![0].OrderDate)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.BoxViews![0].Category)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.BoxViews![0].Design)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.BoxViews![0].Shape)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.BoxViews![0].Size)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.BoxViews![0].Quantity)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.BoxViews![0].Price)
+                        </th>
+                        
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model.BoxViews!)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Brand)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.OrderDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Category)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Design)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Shape)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Size)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Quantity)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Price)
+                            </td>
+                           
+                            <td>
+                                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+            <style>
+                body {
+                    margin: 0;
+                    padding: 0;
+                    background-image: url('/img/bg.jpg');
+                    background-size: cover;
+                    height: 100vh; /* Ensure the background covers the full height of the viewport */
+                }
+
+                .text-center {
+                    text-align: center;
+                    padding: 50px; /* Adjust as needed */
+                    color: midnightblue; /* Optional: set text color to be visible against the background */
+                }
+            </style>
