--- a/Boxetheus/Views/BoxViews/Index.cshtml
+++ b/Boxetheus/Views/BoxViews/Index.cshtml
@@ -47,7 +47,12 @@
                         <th>
                             @Html.DisplayNameFor(model => model.BoxViews![0].Price)
                         </th>
-                        
+                        <th>
+                            @Html.DisplayNameFor(model => model.BoxViews![0].Price)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.BoxViews![0].Color)
+                        </th>
                         <th></th>
                     </tr>
                 </thead>
@@ -79,7 +84,9 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.Price)
                             </td>
-                           
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Color)
+                            </td>
                             <td>
                                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
