Added logo to home page

--- a/Boxetheus/Views/BoxViews/Create.cshtml
+++ b/Boxetheus/Views/BoxViews/Create.cshtml
@@ -71,3 +71,18 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        background-image: url('/img/bckgrd.jpg');
+        background-size: cover;
+        height: 100vh; /* Ensure the background covers the full height of the viewport */
+    }
+
+    .text-center {
+        text-align: center;
+        padding: 50px; /* Adjust as needed */
+        color: midnightblue; /* Optional: set text color to be visible against the background */
+    }
+</style>
