--- a/Boxetheus/Views/Home/Privacy.cshtml
+++ b/Boxetheus/Views/Home/Privacy.cshtml
@@ -1,6 +1,28 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
-}
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+}
+
+<div class="text-center">
+    <h1 class="display-4">Privacy Policy</h1>
+
+    <p>At Boxetheus, we hold the privacy of our customers and visitors in high regard and strive to uphold it with utmost respect..</p>
+    <p>Any gathering, utilization, or sharing of personal or billing information will adhere to the laws of Ontario.</p>
+    <p>If you have any questions or concerns about this Privacy Policy or our handling of your personal information, please contact us.</p>
+</div>
+
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        background-image: url('/img/bckg.jpg');
+        background-size: cover;
+        height: 100vh; /* Ensure the background covers the full height of the viewport */
+    }
+
+    .text-center {
+        text-align: center;
+        padding: 50px; /* Adjust as needed */
+        color: midnightblue; /* Optional: set text color to be visible against the background */
+    }
+</style>
