--- a/Boxetheus/Views/BoxViews/Details.cshtml
+++ b/Boxetheus/Views/BoxViews/Details.cshtml
@@ -64,3 +64,18 @@
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        background-image: url('/img/bckg.jpg');
+        background-size: cover;
+        height: 100vh; /* Ensure the background covers the full height of the viewport */
+    }
+
+    .text-center {
+        text-align: center;
+        padding: 50px; /* Adjust as needed */
+        color: midnightblue; /* Optional: set text color to be visible against the background */
+    }
+</style>
