--- a/Boxetheus/Views/Home/Index.cshtml
+++ b/Boxetheus/Views/Home/Index.cshtml
@@ -1,8 +1,23 @@
-﻿@{
+﻿﻿@{
     ViewData["Title"] = "Home Page";
 }
 
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        background-image: url('/img/img.jpg');
+        background-size: cover;
+        height: 100vh; /* Ensure the background covers the full height of the viewport */
+    }
+
+    .text-center {
+        text-align: center;
+        padding: 50px; /* Adjust as needed */
+        color: black; /* Optional: set text color to be visible against the background */
+    }
+</style>
+
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-15"> Boxetheus </h1>
 </div>
