Updated appsetting json file

--- a/Boxetheus/Views/Home/Index.cshtml
+++ b/Boxetheus/Views/Home/Index.cshtml
@@ -21,3 +21,9 @@
 <div class="text-center">
     <h1 class="display-15"> Boxetheus </h1>
 </div>
+
+
+
+<div class="text-center" style="position: fixed; bottom: 20px; width: 100%;">
+    <a asp-area="" asp-controller="BoxViews" asp-action="Index" style="font-family: Roboto; margin-top: 20px; font-weight:450; background: linear-gradient(45deg, darkmagenta,black); padding: 7px 15px; border-radius: 20px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); transition: background 0.3s;" class="btn btn-custom text-white">View Products</a>
+</div>
