Added Authentication and Authorization

--- a/Boxetheus/Views/BoxViews/Create.cshtml
+++ b/Boxetheus/Views/BoxViews/Create.cshtml
@@ -65,7 +65,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" style="font-family: Roboto; font-weight:450; background: rebeccapurple; color: white; padding: 5px 10px; border-radius: 5px; text-decoration: none; margin-top: 10px;">Back to List</a>
 </div>
 
 @section Scripts {
