--- a/Boxetheus/Views/BoxViews/Index.cshtml
+++ b/Boxetheus/Views/BoxViews/Index.cshtml
@@ -3,20 +3,36 @@
 @{
     ViewData["Title"] = "List of Boxes";
 }
+<style>
+       th {
+        color: black;
+    }
 
-<h1>Box World</h1>
+    td {
+        color: black;
+    }
+</style>
+<h1 class ="text-md-center"><i>Boxetheus Products Database</i></h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <form asp-controller="BoxViews" asp-action="Index" method="get">
     <p>
         <select asp-for="BoxDesign" asp-items="Model.Design">
             <option value="">All</option>
         </select>
+        <span style="margin-right: 10px;"></span>
 
-        Title: <input type="text" asp-for="SearchString" />
-        <input type="submit" value="Filter" />
+        Name:  <input type="text" name="SearchString" />
+
+        <span style="margin-right: 10px;"></span>
+
+        <input type="submit" value="Search" style="font-family: Roboto; font-weight:450; background: rosybrown; color:black; padding: 5px 10px; border-radius: 5px; text-decoration: none;" />
+
+        @if (User.IsInRole("Admin"))
+        {
+          
+            <a asp-action="Create" style="font-family: Roboto; font-weight:450; background: rosybrown; color:black; padding: 5px 10px; border-radius: 5px;text-decoration: none;">Create New</a>
+           
+        }
     </p>
 </form>
 
@@ -88,9 +104,17 @@
                                 @Html.DisplayFor(modelItem => item.Color)
                             </td>
                             <td>
-                                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <a asp-action="Edit" asp-route-id="@item.Id" style="font-family: Roboto; font-weight:450; background:cadetblue ; color: black; padding: 5px 10px; border-radius: 5px; text-decoration: none;">Edit</a>
+                    }
+
+                        <a asp-action="Details" asp-route-id="@item.Id" style="font-family: Roboto; font-weight:450; background:mediumpurple ; color: black; padding: 5px 10px; border-radius: 5px; text-decoration: none;">Details</a>
+                    
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <a asp-action="Delete" asp-route-id="@item.Id" style="font-family: Roboto; font-weight:450; background: steelblue ; color: black; padding: 5px 10px; border-radius: 5px; text-decoration: none;">Delete</a>
+                    }
                             </td>
                         </tr>
                     }
@@ -108,6 +132,6 @@
                 .text-center {
                     text-align: center;
                     padding: 50px; /* Adjust as needed */
-                    color: midnightblue; /* Optional: set text color to be visible against the background */
+                    color: black; /* Optional: set text color to be visible against the background */
                 }
             </style>
