--- a/Boxetheus/Views/BoxViews/Delete.cshtml
+++ b/Boxetheus/Views/BoxViews/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>BoxView</h4>
+    
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -63,9 +63,9 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+        <input type="submit" value="Delete" class="btn btn-danger" style="font-family: Roboto; font-weight:450; margin-bottom: 10px;" />
+        <a asp-action="Index" style="font-family: Roboto; font-weight:450; background: rebeccapurple; color: white; padding: 5px 10px; border-radius: 5px; text-decoration: none; margin-top: 10px;">Back to List</a>
+          </form>
 </div>
 <style>
     body {
