--- a/Boxetheus/Views/BoxViews/Edit.cshtml
+++ b/Boxetheus/Views/BoxViews/Edit.cshtml
@@ -5,8 +5,6 @@
 }
 
 <h1>Edit</h1>
-
-<h4>BoxView</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -59,14 +57,14 @@
                 <span asp-validation-for="Color" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" style="font-family: Roboto; font-weight:450; margin-top: 10px; margin-bottom: 10px;"/>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" style="font-family: Roboto; font-weight:450; background: rebeccapurple; color: white; padding: 5px 10px; border-radius: 5px; text-decoration: none; margin-top: 10px;">Back to List</a>
 </div>
 
 @section Scripts {
