--- a/Boxetheus/Views/Shared/_Layout.cshtml
+++ b/Boxetheus/Views/Shared/_Layout.cshtml
@@ -14,29 +14,32 @@
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img srcset="~/img/logos.png"/>     
                 </a>
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Boxetheus App</a>
+                
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
+                        
                         <style>
                             .nav-item-right {
                                 margin-left: auto;
                             }
                         </style>
                         <li class="nav-item nav-item-left">
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                        
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="BoxViews" asp-action="Index">Boxetheus Products</a>
+                                <b> <a class="nav-link text-dark" asp-area="" asp-controller="BoxViews" asp-action="Index">Boxetheus Products</a></b>
                         </li>
-
-                        <li class="nav-item nav-item-right">
+                        }
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                           <b> <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Aboutus">About Us</a></b>
+                        </li>
+                        <li class="nav-item">
+                           <b> <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></b>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
