--- a/Boxetheus/Views/Shared/_Layout.cshtml
+++ b/Boxetheus/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                             }
                         </style>
                         <li class="nav-item nav-item-left">
+                        //Added Authentication
                         @if (User.Identity.IsAuthenticated)
                         {
                         
