deployed production link successfully in to azure sit

--- a/Boxetheus/Views/Shared/_Layout.cshtml
+++ b/Boxetheus/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -28,7 +29,7 @@
                             }
                         </style>
                         <li class="nav-item nav-item-left">
-                        //Added Authentication
+                       
                         @if (User.Identity.IsAuthenticated)
                         {
                         
